[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-hiring"
version = "0.1.0"
description = "Résumé screening with explicit fairness constraints (Fairlearn ThresholdOptimizer / Equalized Odds)"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn>=1.4",
  "fairlearn>=0.10",
  "matplotlib",
  "seaborn",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "joblib",
  "pyarrow",
  "mlflow",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["src"]
